Fixed navigation to glosario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
         <item>Semidisminuido con septima</item>
     </string-array>
 
+    <string name="glosario1">Acordes: alsdkfjalskdfjalskdjflskfjldkfjlf</string>
+
 </resources>
