Nombres de lecciones hasta unidad 4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,42 @@
     <string name="Triadas_glosario"><b>Tríadas: </b>Es un conjunto de sonidos que se sostienen en una misma nota principal llamada tónica. La sucesión de esas notas componen las escalas.</string>
     <string name="Unisono_glosario"><b>Unísono: </b>Es un intervalo musical de proporción 1:1 y ningún semitono ni cent. Se considera que dos tonos al unísono tienen la misma altura.</string>
 
+    <string-array name="unidad1">
+        <item>Lección 1: El sonido</item>
+        <item>Lección 2: Propiedades del sonido</item>
+        <item>Lección 3: Introducción a la música</item>
+        <item>Lección 4: Introducción a la música(Continuación)</item>
+        <item>Lección 5: Alteraciones y Diatonismo vs cromatismo</item>
+        <item>Lección 6: Introducción a la lectura musical (Claves y notas)</item>
+        <item>Lección 7: Lectura musical I</item>
+        <item>Lección 8: Lectura musical I</item>
+        <item>Lección 9: Lectura musical II</item>
+    </string-array>
+
+    <string-array name="unidad2">
+        <item>Lección 1: Teoría rítmica I</item>
+        <item>Lección 2: Teoría rítmica II</item>
+        <item>Lección 3: Sincopa vs contratiempo</item>
+        <item>Lección 4: Signos de repetición y dinámicas</item>
+    </string-array>
+
+    <string-array name="unidad3">
+        <item>Lección 1: Introducción a las escalas</item>
+        <item>Lección 2: Escala Mayor Natural</item>
+        <item>Lección 3: Escala Menor Natural</item>
+        <item>Lección 4: Tonalidades</item>
+        <item>Lección 5: Escala Pentatónica y armónica</item>
+        <item>Lección 6: Escala menor bachiana, menor melódica y cromática</item>
+    </string-array>
+
+    <string-array name="unidad4">
+        <item>Lección 1: Intervalos</item>
+        <item>Lección 2: Intervalos II</item>
+        <item>Lección 3: Acordes I</item>
+        <item>Lección 4: Acordes II</item>
+        <item>Lección 5: Acordes III</item>
+        <item>Lección 6: Acordes IV</item>
+        <item>Lección 7: Acordes V</item>
+    </string-array>
+
 </resources>
