--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,19 @@
         <item>Lección 6: Acordes IV</item>
         <item>Lección 7: Acordes V</item>
     </string-array>
+    <string-array name="Unidad5">
+        <item>Lección 1: Introducción a las escalas modales</item>
+        <item>Lección 2: Modos mayores</item>
+        <item>Lección 3: Modos menores </item>
+        <item>Lección 4: Otras escalas I</item>
+        <item>Lección 5: Otras escalas II</item>
+    </string-array>
+    <string-array name="Unidad6">
+        <item>Lección 1: Rango vocales</item>
+        <item>Lección 2: Improvisación</item>
+        <item>Lección 3: Progresiones de acordes</item>
+        <item>Lección 4:Re-armonización</item>
+        <item>Lección 5: Como componer</item>
+    </string-array>
 
 </resources>
