--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@
         <item>Lección 7: Acordes V</item>
     </string-array>
 
-    <string-array name="Unidad5">
+    <string-array name="unidad5">
         <item>Lección 1: Introducción a las escalas modales</item>
         <item>Lección 2: Modos mayores</item>
         <item>Lección 3: Modos menores </item>
@@ -145,7 +145,7 @@
         <item>Lección 5: Otras escalas II</item>
     </string-array>
 
-    <string-array name="Unidad6">
+    <string-array name="unidad6">
         <item>Lección 1: Rango vocales</item>
         <item>Lección 2: Improvisación</item>
         <item>Lección 3: Progresiones de acordes</item>
