Non Functional implementation of multiview recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,8 +154,9 @@
     </string-array>
 
     <string-array name="El_sonido">
-        <item name="image">something1.jpeg</item>
+        <item name="text">Lorem ipsum asdfasdfasdf</item>
         <item name="image">something.jpeg</item>
+        <item  name="text">Lorem 2</item>
     </string-array>
 
 
