Implementation basica de examen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,7 +109,7 @@
         <item>*Lección: 7 Lectura musical I</item>
         <item>*Lección: 8 Lectura musical II</item>
         <item>*Lección: 9 Lectura musical III</item>
-        <item>Exámen de unidad</item>
+        <item>Exámen de unidad 1</item>
     </string-array>
 
     <string-array name="unidad2">
